# website-hyweene

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  build  mise.toml  pyproject.toml
.github/workflows/: docker-build-push.yaml
content/links/: 2024-02-28-voix-du-nord-boite-pizza-radar.md  2024-02-29-pierre-curry.md  2024-11-28-apple-heartstrings.md  2025-01-06-au-texas-des-bebes-morts-retrouves-dans-des-poubelles-depuis-linterdiction-de-livg.md  2025-01-06-intergalactic-the-heretic-prophet-le-jeu-accuse-de-wokisme.md  2025-02-05-google-removes-pledge-to-not-use-ai-for-weapons-from-website.md  2025-03-25-faute-de-resultats-lexperimentation-de-la-videosurveillance-algorithmique-est-prolongee.md  2025-07-23-resurrecting-a-dead-torrent-tracker-and-finding-3-million-peers.md  2025-07-25-une-etude-americaine-revele-que-le-vapotage-double-le-risque-de-maladies-pulmonaires-graves-meme-sans-antecedents-de-tabagisme.md  2025-07-26-its-time-for-modern-css-to-kill-the-spa.md  2025-07-27-futurasciences-les-monty-python-avaientils-trouve-la-solution-a-un-probleme-majeur-de-sante-publique-la-science-approuve-cette-methode-insolite.md  2025-09-12-en-albanie-le-chef-du-gouvernement-nomme-un-ministre-genere-par-lia-une-premiere.md  2025-11-27-si-vous-mcherchez-jsuis-ailleurs.md  (+14 more)
docker/: Dockerfile
docs/: APP.md  ARCHITECTURE.md  CONFIG_ENV.md  FEATURES.md  README.md  SETUP.md  STACK.md
generator/: Package.resolved  Package.swift
scripts/: quick_add_link.py  smolweb_validator.sh
src/: config.py  main.py  release.py
templates/: homepage.j2  main.j2
(+297 files in other folders)
